WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262575
REGRESSION (
266680@main
): iOS PLUM ~0.75% increased memory use
https://bugs.webkit.org/show_bug.cgi?id=262575
Summary
REGRESSION (266680@main): iOS PLUM ~0.75% increased memory use
Wenson Hsieh
Reported
2023-10-03 15:11:32 PDT
rdar://114845469
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-10-04 08:02:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18619
EWS
Comment 2
2023-10-04 16:33:23 PDT
Committed
268882@main
(a776b382b039): <
https://commits.webkit.org/268882@main
> Reviewed commits have been landed. Closing PR #18619 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug