Cherry-pick a776b382b039. rdar://114845469

REGRESSION (266680@main): iOS PLUM ~0.75% increased memory use
    https://bugs.webkit.org/show_bug.cgi?id=262575
    rdar://114845469

    Reviewed by Per Arne Vollan and Ryosuke Niwa.

    Add a runtime-enabled setting to control whether or not the opportunistic task scheduler should be
    enabled for the purposes of opportunistic sweeping and GC. This currently causes a memory regression
    on PLUM, specifically on certain iPhone models.

    * Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
    * Source/WebCore/page/OpportunisticTaskScheduler.cpp:
    (WebCore::OpportunisticTaskScheduler::runLoopObserverFired):

    Canonical link: https://commits.webkit.org/268882@main

Identifier: 267815.220@safari-7617-branch